# fluffy-engine

./: CMakeLists.txt  README.md
include/GLFW/: glfw3.h
include/bullet/: btBulletCollisionCommon.h
include/glad/: glad.h
include/glm/detail/: func_matrix.hpp
include/glm/gtc/: matrix_transform.hpp
include/glm/gtx/: matrix_decompose.inl
include/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3_loader.h  imgui_internal.h  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
include/stb/: stb_image.h
include/xml/: manual.html
libs/msvc/debug/: Bullet3Common_Debug.lib  BulletInverseDynamics_Debug.lib  LinearMath_Debug.lib
libs/msvc/release/: Bullet3Common.lib  BulletInverseDynamics.lib  LinearMath.lib
resources/: cube.glb  solid.frag  solid.vert  text.frag  text.vert
source/: glad.c
src/: Camera.h  Client.h  Config.h  DebugDraw.h  GLUtils.h  Gltf.h  Image.cpp  Image.h  Main.h  Player.h  Skybox.h  Thing.h  Ui.cpp  Ui.h  World.h  main.cpp
src/gfx/: KeyboardManager.h  MouseManager.h  Util.h  Window.h
src/objects/: Buffer.h  ShaderProgram.cpp  ShaderProgram.h  Texture.h  VertexArray.cpp  VertexArray.h
src/rendering/: Image.cpp  Skybox.h  Text.h
src/rendering/objects/: Buffer.h  ShaderProgram.h  Texture.h  VertexArray.h
src/scene/: IObject.h  Scene.h
src/utils/: Utils.h
